<resources>
    <string name="app_name">NHL Info App</string>
    <string name="app_intro">Welcome to my app!</string>
    <string name="app_explanation">Here you can find data about players and teams in the NHL sorted to your preference. \nContinue below to begin.</string>
    <string name="chooseTeam">View a team: </string>
    <string name="view_team">View this team!</string>
    <string name="placeholder_div">Division</string>
    <string name="placeholder_conf">Conference</string>
    <string name="placeholder_team_name">Team Name</string>
    <string name="placeholder_team_venue">Team Venue</string>
    <string name="placeholder_roster_name">Player Name</string>
    <string name="placeholder_games_played">Games</string>
    <string name="placeholder_goals">Goals</string>
    <string name="placeholder_assists">Assists</string>
    <string name="placeholder_total_points">Points</string>
    <string name="placeholder_toi">Avg TOI</string>
    <string name="placeholder_season">Season</string>
    <string name="choose_division">View this Division</string>
    <string name="placeholder_name_division">Name of Division</string>
    <string name="placeholder_div_team_name">Team Name</string>
    <string name="placeholder_wins">Wins</string>
    <string name="placeholder_losses">Losses</string>
    <string name="placeholder_points">Points</string>
    <string name="placeholder_ot_losses">OTL</string>
    <string name="double_pipes">||</string>
</resources>
