<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_background"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_intro"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/explanationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introText"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_explanation"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/chooseTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/explanationText"
        android:layout_marginLeft="10dp"
        android:text="@string/chooseTeam"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/teams_spinner"
        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chooseTeam"
        android:layout_marginLeft="160dp"
        android:longClickable="true"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/view_selected_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teams_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_blue_light"
        android:paddingHorizontal="15dp"
        android:text="@string/view_team" />

    <TextView
        android:id="@+id/chooseDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_selected_team"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/chooseTeam"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/divisions_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chooseDivision"
        android:layout_marginLeft="160dp" />

    <Button
        android:id="@+id/view_selected_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divisions_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingHorizontal="15dp"
        android:text="@string/choose_division" />

</RelativeLayout>