<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/division_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="@string/placeholder_name_division"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/scrollTeams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/division_name"
        android:layout_marginTop="5dip"
        android:fillViewport="true"
        android:paddingLeft="15dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical">

        <HorizontalScrollView
            android:id="@+id/horizontalScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:scrollbars="horizontal|vertical">

            <TableLayout
                android:id="@+id/divisionTable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/divisionRow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/team_div_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingHorizontal="2.5dp"
                        android:text="@string/placeholder_team_name"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_div_wins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingHorizontal="2.5dp"
                        android:text="@string/placeholder_wins"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_div_losses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingHorizontal="2.5dp"
                        android:text="@string/placeholder_losses"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_div_ot_losses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingHorizontal="2.5dp"
                        android:text="@string/placeholder_ot_losses"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_div_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingHorizontal="2.5dp"
                        android:text="@string/placeholder_points"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</RelativeLayout>